{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 20,
  "lineage": "7f26377a-bb38-1866-4333-78cda26f6750",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "for-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d25e4c9454bb93c",
            "arn": "arn:aws:ec2:us-east-2:862066027316:elastic-ip/eipalloc-04d25e4c9454bb93c",
            "domain": "vpc",
            "id": "eipalloc-04d25e4c9454bb93c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-14-98-127.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.98.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-vpc-nat-gw-eip"
            },
            "tags_all": {
              "Name": "prod-vpc-nat-gw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsvpc-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:862066027316:instance/i-0d0a46196a6d935e0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0a46196a6d935e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfd870f7d28fbb54",
            "private_dns": "ip-162-0-1-49.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "162.0.1.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4db7dd5ff24eafb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033d9c272ac53c956",
            "tags": {
              "Name": "prod-vpc-instance"
            },
            "tags_all": {
              "Name": "prod-vpc-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073c75b858d75175a"
            ]
          },
          "dependencies": [
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:internet-gateway/igw-088dc90c8d59decf3",
            "id": "igw-088dc90c8d59decf3",
            "owner_id": "862066027316",
            "tags": {
              "Name": "prod-vpc-igw"
            },
            "tags_all": {
              "Name": "prod-vpc-igw"
            },
            "vpc_id": "vpc-0d00292079a037896"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wss-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d25e4c9454bb93c",
            "association_id": "eipassoc-0b4c20068ef92900b",
            "connectivity_type": "public",
            "id": "nat-0d8418e739ea96f32",
            "network_interface_id": "eni-02cb96d54e0703b48",
            "private_ip": "162.0.1.27",
            "public_ip": "52.14.98.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033d9c272ac53c956",
            "tags": {
              "Name": "prod-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "prod-vpc-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:route-table/rtb-0ae2b2f42b699514f",
            "id": "rtb-0ae2b2f42b699514f",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8418e739ea96f32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-pri-rt"
            },
            "tags_all": {
              "Name": "prod-vpc-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d00292079a037896"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for-nat",
            "aws_nat_gateway.wss-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:route-table/rtb-069d53a23f466f8bf",
            "id": "rtb-069d53a23f466f8bf",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088dc90c8d59decf3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "162.0.1.0/26",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8418e739ea96f32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "prod-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d00292079a037896"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for-nat",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.wss-nat",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a178045590cbfe80",
            "route_table_id": "rtb-0ae2b2f42b699514f",
            "subnet_id": "subnet-0c48836bdc6f9944e"
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_nat_gateway.wss-nat",
            "aws_route_table.pri-rt",
            "aws_subnet.wss-pri",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cb56f96f4bd5c24",
            "route_table_id": "rtb-069d53a23f466f8bf",
            "subnet_id": "subnet-033d9c272ac53c956"
          },
          "dependencies": [
            "aws_eip.for-nat",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.wss-nat",
            "aws_route_table.pub-rt",
            "aws_subnet.wss-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wss-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:subnet/subnet-0c48836bdc6f9944e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "162.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c48836bdc6f9944e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-vpc-pri-sub"
            },
            "tags_all": {
              "Name": "prod-vpc-pri-sub"
            },
            "vpc_id": "vpc-0d00292079a037896"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wss-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:subnet/subnet-033d9c272ac53c956",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "162.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033d9c272ac53c956",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-vpc-pub-sub"
            },
            "tags_all": {
              "Name": "prod-vpc-pub-sub"
            },
            "vpc_id": "vpc-0d00292079a037896"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:862066027316:vpc/vpc-0d00292079a037896",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "162.0.0.0/16",
            "default_network_acl_id": "acl-0b94135adc2da6f4f",
            "default_route_table_id": "rtb-056db189561156494",
            "default_security_group_id": "sg-073c75b858d75175a",
            "dhcp_options_id": "dopt-0a88cb5f54225e1b8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d00292079a037896",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056db189561156494",
            "owner_id": "862066027316",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}